# stabilizer-toolkit

./: .gitignore  README.md  pyproject.toml
notebooks/: five_qubit_cczs.ipynb  four_qubit_cczs.ipynb  three_qubit_cczs.ipynb
stabilizer_toolkit/: __init__.py
stabilizer_toolkit/decompositions/: __init__.py  validate.py
stabilizer_toolkit/decompositions/rank2/: __init__.py  search_all_stabilizer_states.py  ternary_search.py
stabilizer_toolkit/helpers/: __init__.py  ray.py  unitary.py  vector.py
stabilizer_toolkit/magic_states/: __init__.py  ccz.py
