[tool.poetry]
name = "stabilizer-toolkit"
version = "0.1.0"
description = "A toolkit for working with the stabilizer formalism: states, rank, decompositions, etc."
authors = ["Amir Ebrahimi <github@aebrahimi.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "stabilizer_toolkit"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
