[tool.poetry]
name = "stabilizer-toolkit"
version = "0.1.0"
description = "A toolkit for working with the stabilizer formalism: stabilizer states, rank, decompositions, etc."
authors = ["Amir Ebrahimi <github@aebrahimi.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "stabilizer_toolkit"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23,<1.24"
stabilizer-states = { version = "^0.1.1", optional = true }
tqdm = "^4.65.0"
cirq = { version = "^1.1.0", optional = true }
ray = "^2.3.1"
psutil = "^5.9.5"

[tool.poetry.extras]
states = ["stabilizer-states"]
helpers = ["cirq"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
debugpy = "1.6.4"
jupyterlab = "^3.6.2"
black = {extras = ["d", "jupyter"], version = "^23.1.0"}
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120